--- a/application/templates/project/feedback.html
+++ b/application/templates/project/feedback.html
@@ -3,346 +3,44 @@
     <link rel="stylesheet" href="/static/css/ol.css" type="text/css">
     <link rel="stylesheet" href="/static/maps.css" type="text/css">
     <style>
-
     	ul#feedback-list small {
     		color:#888;
     	}
     	ul#feedback-list p.comment-body {
     		margin:0;
     	}
-p#comment-body {
-    margin-bottom:0;
-}
-    p.reply-body {
-        padding-top:5px;padding-left:22px;padding-right:150px;
-}
-ul#comment-replies {
-    margin-bottom:0;
-}
-ul#comment-replies li {
-    margin-bottom:0;
-    padding-bottom:0;
-}
+        p#comment-body {
+            margin-bottom:0;
+        }
+        p.reply-body {
+            padding-top:5px;padding-left:22px;padding-right:150px;
+        }
+        ul#comment-replies {
+            margin-bottom:0;
+        }
+        ul#comment-replies li {
+            margin-bottom:0;
+            padding-bottom:0;
+        }
     </style>
 {% endblock %}
 {% block footjs %}
-	<script>
+	<script type="text/javascript">
 		WMS_URL='/wms/{{wms_key}}';
-
-    BACKGROUND_LAYERS={
-        url: '{{config['MAPSERVER_URL']}}',
-        params: {
-          'LAYERS':'{{project.background_layer_default}}',
-          'TILED': true,
-          'MAP':'{{project.background_layers_mapfile}}',
-          'FORMAT':'image/png; mode=8bit' //image/png; mode=8bit
-        },
-        serverType: 'mapserver'
-      };
-
+        BACKGROUND_LAYERS={
+            url: '{{config['MAPSERVER_URL']}}',
+            params: {
+              'LAYERS':'{{project.background_layer_default}}',
+              'TILED': true,
+              'MAP':'{{project.background_layers_mapfile}}',
+              'FORMAT':'image/png; mode=8bit' //image/png; mode=8bit
+            },
+            serverType: 'mapserver'
+        };
 	</script>
 	<script type="text/javascript" src="/static/js/ol.js"></script>
-	<script type="text/javascript" src="/static/fieldworkonline.js"></script>
-	<script type="text/javascript">
-        String.prototype.trunc = String.prototype.trunc ||
-      function(n){
-          return this.length>n ? this.substr(0,n-1)+'&hellip;' : this;
-      };
-			function point_as_layer(coord) {
-				/* returns a ready made vector layer with a single point. this saves
-				   some hassle with trying to grab the point and move it. */
-				if(coord) {
-					features=[new ol.Feature({geometry:new ol.geom.Point(coord)})]
-				} else {
-					features=[]
-				}
-				var vectorSource = new ol.source.Vector({
-		    		'features':features,
-		    		'projection':'EPSG:4326'
-		    	});
-			    var iconStyle = new ol.style.Style({
-			      image: new ol.style.Icon( ({
-			        anchor: [0.5, 48],
-			        anchorXUnits: 'fraction',
-			        anchorYUnits: 'pixels',
-			        opacity: 1,
-			        src: '/static/gfx/m2.png'
-			      }))
-			    });
-			    _lyr=new ol.layer.Vector({source: vectorSource,style: iconStyle});
-			    _lyr._fwid="marker"
-			    return _lyr
-			}
-		$(function() {
+	<script type="text/javascript" src="/static/lib/fwo/fieldworkonline-feedback.js"></script>
 
-			function initialize_commentmap(wmslayers) {
-                var layers=wmslayers.split("|")
-                var layers_background=layers[0]
-                var layers_foreground=layers[1]
-
-				var backgroundLayer=new ol.layer.Tile({
-					visible: false,
-					preload: Infinity,
-					source: new ol.source.BingMaps({
-						key: 'ApEqbYdQJSwOJ-KqrCQsI1AAouPQHkng2AjdJsQjLjK55P0yNQc-eEfOLUPUAAMt',
-						imagerySet: 'Aerial'
-					})
-				});
-				backgroundLayer._fwid="background"
-				var vectorLayer=point_as_layer()
-				
-				var wmsLayer=new ol.layer.Image({
-					source: new ol.source.ImageWMS({
-						url: WMS_URL,
-						params: { 'LAYERS': layers_foreground }
-					})
-				});
-				wmsLayer._fwid="wms"
-
-                window.backgroundLayerWMS=new ol.layer.Tile({
-                    visible:false,
-                    //extent: [-13884991, 2870341, -7455066, 6338219],
-                    source: new ol.source.TileWMS((BACKGROUND_LAYERS))
-                });
-
-				window.commentmap = new ol.Map({
-					target: 'commentmap',
-					layers: [backgroundLayer,window.backgroundLayerWMS,vectorLayer,wmsLayer],
-					view: new ol.View({	
-						center: ol.proj.transform([5.721586,44.42], 'EPSG:4326', 'EPSG:3857'),
-						zoom: 11
-					}),
-					controls: ol.control.defaults().extend([
-						new ol.control.ScaleLine()
-					])
-				});
-			}
-
-			$('a.load-feedback-link').click(function(evt){
-                console.log("click")
-				evt.preventDefault()
-				$('a.load-feedback-link').removeClass("active")
-				var _link=$(this)
-				_link.addClass("active")
-				var _wmslayers=_link.data("map-state")
-				if (!window.hasOwnProperty("commentmap")) {
-					initialize_commentmap()
-				}
-                var layers=_wmslayers.split("|")
-                var layers_background=layers[0]
-                var layers_foreground=layers[1]
-                console.log("layers_background:"+layers_background)
-                console.log("layers_foreground:"+layers_foreground)
-
-				//update the wms and the marker layers to reflect the comment
-				//where submit was clicked
-				window.commentmap.getLayers().forEach(function (lyr) {
-					if(lyr.hasOwnProperty("_fwid")) {
-						if(lyr._fwid=="wms") {
-							//this is the wms layer in the map, lets update 
-							//it to show the right layers.
-							lyr.getSource().updateParams({'LAYERS':_wmslayers})
-						}
-						if(lyr._fwid=="marker") {
-							//this is the marker layer. just remove it, we'll add a new one later
-							window.commentmap.removeLayer(lyr)
-						}
-					}
-				});
-				var _xy=_link.data("map-marker").split(",")
-				var _newlyr=point_as_layer([parseFloat(_xy[0]),parseFloat(_xy[1])])
-				window.commentmap.addLayer(_newlyr)
-				//change the map view to the right center/zoom level.
-				var _xyz=_link.data("map-view").split(",")
-				window.commentmap.setView(
-					new ol.View({	
-				 		center: [parseFloat(_xyz[0]),parseFloat(_xyz[1])],
-				 		zoom: parseInt(_xyz[2])
-					})
-				);
-				var _commentbody=_link.find("p.comment-body").html()
-				$('p#comment-body').html(_commentbody)
-
-			})
-			//trigger the click event on the first link
-			$('a.load-feedback-link').first().click()
-		});
-
-    FWO={
-        comments:{
-            data:[],
-            get_comment_by_id:function(id){
-                for(var i in FWO.comments.data) {
-                    if(FWO.comments.data[i].id==id) {
-                        return FWO.comments.data[i]
-                    }
-                }
-            },
-            reload:function(comment_id) {
-                $.getJSON("feedback.json", function(data){
-                    FWO.comments.data=data
-                    FWO.comments.list.html("")
-                    $.each(data,function(i){
-                        comment=data[i]
-                        FWO.comments.list.append('<a href="#" class="list-group-item feedback-link" data-comment-id="'+comment.id+'"><strong>Comment by '+comment.comment_by+'</strong> <span style="float:right;">'+comment.comment_age+' ('+comment.replies.length+' replies)</span><p class="comment-body">'+comment.comment_body.trunc(130)+'</p></a>')
-                        
-                    })
-                    $('a.feedback-link').click(function(evt){
-                        evt.preventDefault()
-                        link=$(this)
-                        FWO.comments.select_comment(link.data('comment-id'))
-                    })
-                    if(typeof comment_id=='undefined') {
-                        $('a.feedback-link').first().click()
-                    } else {
-                        FWO.comments.select_comment(comment_id)
-                    }
-                    $("#num-comments").html(FWO.comments.data.length)
-                })
-                $("#reply-body").val("")
-            },
-            init:function(comment_id) {
-                FWO.comments.reload()
-                $("form#comment-reply-form").submit(function(event) {
-                    event.preventDefault()
-                    form=$(this)
-                    console.log("Posting a reply!")
-                    $.post(form.attr("action"), form.serialize(),function(){
-                        sel_comment=parseInt($('#comment-parent').val())
-                        FWO.comments.reload(sel_comment)
-                    })
-                })
-                FWO.comments.map.init()
-            },
-            select_comment:function(comment_id) {
-                comment=typeof comment_id=='undefined'?FWO.comments.data[0]:FWO.comments.get_comment_by_id(comment_id)
-                detail=$('div#comment-detail')
-                replies=detail.find('ul#comment-replies')
-
-                $('a.feedback-link').removeClass("active")
-                $('a.feedback-link').each(function(){
-    
-                    link=$(this)
-                    if(link.data('comment-id')==comment.id) {
-                        link.addClass("active")
-                    }
-                })
-
-                detail.find('#comment-body').html(comment.comment_body)
-                detail.find('#comment-by').html(comment.comment_by)
-                detail.find('#comment-age').html(comment.comment_age)
-                detail.find('#comment-parent').val(comment.id)
-
-                replies.html("")
-                for(var r in comment.replies) {
-                    reply=comment.replies[r]
-                    replies.append('<li class="list-group-item" style="border:none;padding-left:0px;"><strong><i class="fa fa-reply fa-rotate-180 fa-fw"></i> Reply by '+reply.reply_by+'</strong> posted '+reply.comment_age+'<p class="reply-body">'+reply.comment_body+'</p></li>')
-                }
-                FWO.comments.map.load_comment(comment_id)
-                return true;
-            },
-            // post_reply(comment_id,reply) {
-            //
-            // },
-            list:$('ul#feedback-list'),
-            map:{
-                background_layer:new ol.layer.Tile({
-                    visible: false,
-                    preload: Infinity,
-                    source: new ol.source.BingMaps({key: 'ApEqbYdQJSwOJ-KqrCQsI1AAouPQHkng2AjdJsQjLjK55P0yNQc-eEfOLUPUAAMt', imagerySet: 'Aerial'})
-                }),
-                background_wms_layer:new ol.layer.Tile({
-                    visible:false,
-                    source: new ol.source.TileWMS((BACKGROUND_LAYERS))
-                }),
-                foreground_wms_layer:new ol.layer.Image({
-                    source: new ol.source.ImageWMS({
-                        visible:false,
-                        url: WMS_URL,
-                        params: { 'LAYERS': "" }
-                    })
-                }),
-                obj:new ol.Map({
-                    target: 'commentmap',
-                    layers: [],
-                    view: new ol.View({	
-                        center: ol.proj.transform([5.721586,44.42], 'EPSG:4326', 'EPSG:3857'),
-                        zoom: 11
-                    }),
-                    controls: ol.control.defaults().extend([
-                        new ol.control.ScaleLine()
-                    ])
-                }),
-                init:function(){
-                    FWO.comments.map.obj.addLayer(FWO.comments.map.background_layer)
-                    FWO.comments.map.obj.addLayer(FWO.comments.map.background_wms_layer)
-                    FWO.comments.map.obj.addLayer(FWO.comments.map.foreground_wms_layer)
-                    var marker_layer=point_as_layer()
-                    FWO.comments.map.obj.addLayer(marker_layer)
-                },
-                load_comment:function(comment_id) {
-                    comment=FWO.comments.get_comment_by_id(comment_id)
-
-                    var map_state=comment.map_state.split("|")
-                    var layers_background=""
-                    var layers_foreground=""
-                    if (map_state.length == 2) {
-                        layers_background=map_state[0]
-                        layers_foreground=map_state[1]
-                    } else {
-                        layers_background=""
-                        layers_foreground=map_state
-                    }
-                    layers_background=layers_background==""?"bing-aerial":layers_background
-
-                    if (layers_background=="bing-aerial") {
-                        FWO.comments.map.background_layer.setVisible(true)
-                        FWO.comments.map.background_wms_layer.setVisible(false)
-                    } else {
-                        FWO.comments.map.background_layer.setVisible(false)
-                        FWO.comments.map.background_wms_layer.setVisible(true)
-                        FWO.comments.map.background_wms_layer.getSource().updateParams({'LAYERS':layers_background})    
-                    }
-                    if (layers_foreground!="") {
-                        FWO.comments.map.foreground_wms_layer.setVisible(true)
-                        FWO.comments.map.foreground_wms_layer.getSource().updateParams({'LAYERS':layers_foreground})
-                    } else {
-                        FWO.comments.map.foreground_wms_layer.setVisible(false)
-                    }
-
-                    var _xyz=comment.map_view.split(",")
-    				FWO.comments.map.obj.setView(
-    					new ol.View({	
-    				 		center: [parseFloat(_xyz[0]),parseFloat(_xyz[1])],
-    				 		zoom: parseInt(_xyz[2])
-    					})
-    				);
-                    FWO.comments.map.move_marker_to(comment.map_marker)
-                },
-                move_marker_to:function(coord) {
-				    FWO.comments.map.obj.getLayers().forEach(function (lyr) {
-    					if(lyr.hasOwnProperty("_fwid")) {
-    						if(lyr._fwid=="marker") {
-    							//this is the marker layer. just remove it, we'll add a new one rght after.
-    							FWO.comments.map.obj.removeLayer(lyr)
-    						}
-    					}
-    				});
-				    var _xy=coord.split(",")
-				    var _newlyr=point_as_layer([parseFloat(_xy[0]),parseFloat(_xy[1])])
-                    
-                    FWO.comments.map.obj.addLayer(_newlyr)
-                }
-            }
-        }
-    }
-    $(document).ready(function() {
-        FWO.comments.init()
-    });
-    
-
-
-	</script>
 {% endblock %}
 {% block content %}
 	<!--<h2>Project feedback</h2>-->
@@ -372,37 +70,35 @@ ul#comment-replies li {
 		</div>
 	</div>
 	<div class="row">
-            <div class="col-md-12 col-sm-12">
-			<div class="panel panel-default" id="comment-detail">
+        <div class="col-md-12 col-sm-12">
+		<div class="panel panel-default" id="comment-detail">
 
-                    <div class="panel-heading">
-                        <strong><i class="fa fa-quote-left"></i> Original comment by <span id="comment-by"></span></strong> posted <span id="comment-age"></span>
+                <div class="panel-heading">
+                    <strong><i class="fa fa-quote-left"></i> Original comment by <span id="comment-by"></span></strong> posted <span id="comment-age"></span>
+                </div>
+                
+                <div class="panel-body" id="feedback-detail">
+                    <div class="comment-original">
+                        <p id="comment-body"></p>
                     </div>
-                    
-                    <div class="panel-body" id="feedback-detail">
-                        <div class="comment-original">
-                            <p id="comment-body"></p>
+                    <ul class="list-group" id="comment-replies" >
+                        <!--replies are filled dynamically-->
+                    </ul>
+
+                </div>
+                
+                <div class="panel-body" id="feedback-reply" style="background-color:#f5f5f5;border-top:1px solid #ddd;">
+                    <form id="comment-reply-form" action="">
+                        <input name="comment_parent" id="comment-parent" type="hidden" value="">
+                        <div class="form-group" style="margin-top:5px;">
+                        <!--<label for="exampleInputEmail1">Comments or feedback</label>-->
+                        <textarea name="comment_body" class="form-control" id="reply-body" placeholder=""></textarea>
                         </div>
-                        <ul class="list-group" id="comment-replies" >
-                            <!--replies are filled dynamically-->
-                        </ul>
-
-                    </div>
-                    
-                    <div class="panel-body" id="feedback-reply" style="background-color:#f5f5f5;border-top:1px solid #ddd;">
-                        <form id="comment-reply-form" action="">
-                            <input name="comment_parent" id="comment-parent" type="hidden" value="">
-                            <div class="form-group" style="margin-top:5px;">
-                            <!--<label for="exampleInputEmail1">Comments or feedback</label>-->
-                            <textarea name="comment_body" class="form-control" id="reply-body" placeholder=""></textarea>
-                            </div>
-                            <div class="form-group" style="margin-top:5px;text-align:left;" >
-                            <button type="submit" class="btn btn-primary"><i class="fa fa-check"></i> Post a reply</button>
-                            </div>
-                        </form>
-                    </div>
-
-
+                        <div class="form-group" style="margin-top:5px;text-align:left;" >
+                        <button type="submit" class="btn btn-primary"><i class="fa fa-check"></i> Post a reply</button>
+                        </div>
+                    </form>
+                </div>
         </div>
 </div>
 {% endblock %}
