--- a/application/templates/project/maps.html
+++ b/application/templates/project/maps.html
@@ -4,12 +4,7 @@
     <link rel="stylesheet" href="/static/maps.css" type="text/css">
 {% endblock %}
 {% block footjs %}
-  <!--
-  The footjs template block is inserted just before the </body> tag in 
-  the HTML output.
 
-  Using mapfile: {{mapfile}}
-  -->
   <script>
     WMS_URL='/wms/{{wms_key}}';
     BACKGROUND_LAYERS={
@@ -23,9 +18,8 @@
         serverType: 'mapserver'
       };
   </script>
-  <script type="text/javascript" src="/static/js/ol.js"></script>
-  <script type="text/javascript" src="/static/fieldworkonline.js"></script>
-  <script type="text/javascript" src="/static/maps.js"></script>
+  <script type="text/javascript" src="/static/lib/openlayers/ol.js"></script>
+
   <script type="text/javascript">
     var entityMap = {
       "&": "&amp;",
@@ -266,28 +260,7 @@
         return filename_html
       }
     }
-    function setBackgroundLayer(name) {
-      window.activeBackgroundLayer=name
-      $('ul#background-layers li').each(function(){
-        li=$(this)
-        li.removeClass('active')
-        if (li.attr("id")=="background-layer-"+name) {
-          li.addClass('active')
-        }
-      })
-      if(name!='bing-aerial'){
-          window.tileSource.updateParams({
-            'LAYERS':name
-          })
-            window.wmsTileLayer.setVisible(true)
-          window.backgroundLayer.setVisible(false)
-        } else {
-            window.backgroundLayer.setVisible(true)
-            window.wmsTileLayer.setVisible(false)
-            
-        }
-      return false;
-    }
+
   </script>
   <!--
     Load the GetProjectSettings request from our custom WMS proxy. The proxy
@@ -299,6 +272,7 @@
     for our purposes it should work just fine.
   -->
   <script type="text/javascript" src="/wms/{{wms_key}}?SERVICE=WMS&amp;VERSION=1.3&amp;REQUEST=GetProjectSettings&amp;FORMAT=application/json&amp;JSONP=setprojectsettings"></script>
+  <script type="text/javascript" src="/static/lib/fwo/fieldworkonline-map.js"></script>
 {% endblock %}
 
 {% block maps %}
@@ -334,9 +308,10 @@
               <div id="collapseFour" class="panel-collapse collapse">
                 <ul class="list-group" id="background-layers">
                   {% for layer in project.background_layers %}
-                    <li class="list-group-item" id="background-layer-{{layer.name}}"><i class="fa fa-check fa-fw"></i> <a href="#" onclick="setBackgroundLayer('{{layer.name}}');">{{layer.name}}</a></li>
+                    <li class="list-group-item" id="background-layer-{{layer.name}}"><i class="fa fa-check fa-fw"></i> <a href="#" class="set-background-layer" data-set-background-layer="{{layer.name}}">{{layer.name}}</a></li>
                   {% endfor %}
-                    <li class="list-group-item" id="background-layer-bing-aerial"><i class="fa fa-check fa-fw"></i> <a href="#" onclick="setBackgroundLayer('bing-aerial');">bing-aerial</a></li>
+                    <li class="list-group-item" id="background-layer-bing-aerial"><i class="fa fa-check fa-fw"></i> <a href="#" class="set-background-layer" data-set-background-layer="bing-aerial">bing-aerial</a></li>
+                    <li class="list-group-item" id="background-layer-bing-road"><i class="fa fa-check fa-fw"></i> <a href="#" class="set-background-layer" data-set-background-layer="bing-road">bing-road</a></li>
                 </ul>
               </div>
             </div>
@@ -356,52 +331,6 @@
             </div>
             
 
-            <!--
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
-                  <i class="fa fa-fw fa-bars"></i> 
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix"><strong>Attribute Values</strong></a>
-                </h4>
-              </div>
-              <div id="collapseSix" class="panel-collapse collapse">
-                <ul class="list-group" id="attribute-values">
-                  <li class="list-group-item"><i class="fa fa-delicious fa-fw"></i> <a href="#">Bing Maps</a></li>
-                  <li class="list-group-item"><i class="fa fa-th fa-fw"></i> <a href="#">OpenStreetMap (MapQuest)</a></li>
-                  
-                  
-                </ul>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
-                  <i class="fa fa-fw fa-bars"></i> 
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive"><strong>Settings</strong></a>
-                </h4>
-              </div>
-              <div id="collapseFive" class="panel-collapse collapse">
-                <div class="list-group">
-                  <a href="#" class="list-group-item">
-                    <h4 class="list-group-item-heading">List group item heading</h4>
-                    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                  </a>
-                </div>
-                <div class="list-group">
-                  <a href="#" class="list-group-item active">
-                    <h4 class="list-group-item-heading">List group item heading</h4>
-                    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                  </a>
-                </div>
-                <div class="list-group">
-                  <a href="#" class="list-group-item">
-                    <h4 class="list-group-item-heading">List group item heading</h4>
-                    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                  </a>
-                </div>
-              </div>
-            </div>
-            -->
           </div>
           </div>
           <div class="col-md-9 col-sm-9" style="padding-right:0px;padding-left:0;">
