--- a/application/templates/feedback.html
+++ b/application/templates/feedback.html
@@ -34,7 +34,7 @@
 		  </div>
 		 -->
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary"><i class="fa fa-comment"></i> Submit</button>
+        <button type="submit" class="btn btn-primary" id="feedback-modal-submit"><i class="fa fa-comment"></i> Submit</button>
         <input type="hidden" name="map_state" placeholder="map_state" />
         <input type="hidden" name="map_view" placeholder="map_view" />
         <input type="hidden" name="map_marker" placeholder="map_marker" />
