fix favorite users bug

--- a/application/templates/manual.html
+++ b/application/templates/manual.html
@@ -3,12 +3,37 @@
 
 {% endblock %}
 {% block content %}
-<h2>Fieldwork Online Manual</h2>
+
+
 <div class="row">
 	<div class="col-md-12 col-sm-12">
+		<div class="well well-sm">
+		<h2>Fieldwork Online Manual</h2>
+			<h4>General information</h4>
+			<ul>
+				<li><a href="#">Notes on being a supervisor</a></li>
+				<li><a href="#">Workspaces</a></li>
+			</ul>
+			<h4>Adding and viewing data</h4>
+			<ul>
+				<li><a href="#">Adding point data using a spreadsheet</a></li>
+				<li><a href="#">Adding photos and other files or documents</a></li>
+				<li><a href="#">Viewing background information</a></li>
+			</ul>
+			<h4>Leaving comments and feedback</h4>
+			<ul>
+				<li><a href="#">Leaving comments and feedback</a></li>
+			</ul>
+			<h4>Advanced functionality</h4>
+			<ul>
+				<li><a href="#">Accessing data in a Desktop GIS with web services</a></li>
+			</ul>
+		</div>
+		<h3>Notes on being a supervisor</h3>
 		<p>
 			An up-to-date manual and user documentation will be posted here shortly.
 		</p>
+
 	</div>
 </div>
 {% endblock %}
