--- a/application/templates/project/maps.html
+++ b/application/templates/project/maps.html
@@ -7,6 +7,7 @@
 
   <script>
     WMS_URL='/wms/{{wms_key}}';
+    BINGMAPS_KEY='{{config["BINGMAPS_KEY"]}}';
     BACKGROUND_LAYERS={
         url: '{{mapserver_url}}',
         params: {
