--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<head>
 		<title>Fieldwork Online</title>
-		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+		<link href="/static/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
+		<link href="/static/lib/fontawesome/css/font-awesome.min.css" rel="stylesheet">
 		{% block headcss %}{% endblock %}
 		{% block headjs %}{% endblock %}
 		<style>
@@ -74,8 +74,8 @@
 			{% include "footer.html" %}
 		{% endblock %}
 
-		<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<script src="/static/lib/jquery/jquery-2.1.1.min.js"></script>
+		<script src="/static/lib/bootstrap/bootstrap.min.js"></script>
 		{% block footjs %}
 		{% endblock %}
 
