hide bing layers & use jpeg in comment map

--- a/application/templates/project/feedback.html
+++ b/application/templates/project/feedback.html
@@ -34,7 +34,7 @@
               'LAYERS':'{{project.background_layer_default}}',
               'TILED': true,
               'MAP':'{{project.background_layers_mapfile}}',
-              'FORMAT':'image/png; mode=8bit' //image/png; mode=8bit
+              'FORMAT':'image/jpeg' //image/png; mode=8bit
             },
             serverType: 'mapserver'
         };
